# bagel

./: .gitignore  CMakeLists.txt  LICENSE  package.xml
include/bagel/: bagel.h
src/: bagel.cpp  bagel_node.cpp
