<?xml version="1.0"?>
<package format="2">
  <name>bagel</name>
  <version>0.0.0</version>
  <description>The bagel package</description>

  <maintainer email="anon@ymous.com">Micaela Angeli</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>rosbag</depend>


  <export>

  </export>
</package>
